Fix z-index issue with tooltips

--- a/app/assets/stylesheets/base/header.scss
+++ b/app/assets/stylesheets/base/header.scss
@@ -1,4 +1,5 @@
 .header {
+  $menu-z-index: $z-index-9;
   $header-padding: 2rem;
 
   align-items: center;
@@ -13,6 +14,7 @@
   position: fixed;
   right: 0;
   top: 0;
+  z-index: $menu-z-index;
 
   h1 {
     display: inline-block;
